apps/teste-diego/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: teste-diego
  name: teste-diego
spec:
  finalizers:
  - kubernetes
