apps/teste-diego/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste-diego.diegoluisi.eti.br
  labels:
    app: teste-diego
  name: teste-diego
  namespace: teste-diego
spec:
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste-diego
  type: ClusterIP
