apps/teste-diego/base/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste-diego.diegoluisi.eti.br
  labels:
    app: teste-diego
  name: teste-diego
  namespace: teste-diego
spec:
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste-diego
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: teste-diego
  name: teste-diego
  namespace: teste-diego
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teste-diego
  template:
    metadata:
      labels:
        app: teste-diego
    spec:
      containers:
      - image: diegoluisi/teste-diego:3c12d96f
        imagePullPolicy: IfNotPresent
        name: teste-diego
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste-diego
  namespace: teste-diego
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste-diego.diegoluisi.eti.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: teste-diego
        port:
          number: 8080
