apps/teste-diego/base/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: teste-diego
    backstage.io/kubernetes-id: teste-diego
  name: teste-diego
spec:
  finalizers:
  - kubernetes

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste-diego.diegoluisi.eti.br
  labels:
    app: teste-diego
    backstage.io/kubernetes-id: teste-diego
  name: teste-diego
  namespace: teste-diego
spec:
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste-diego
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: teste-diego
    backstage.io/kubernetes-id: teste-diego
  name: teste-diego
  namespace: teste-diego
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teste-diego
  template:
    metadata:
      labels:
        app: teste-diego
        backstage.io/kubernetes-id: teste-diego
    spec:
      containers:
      - image: diegoluisi/teste-diego:3c12d96f
        imagePullPolicy: IfNotPresent
        name: teste-diego
        ports:
        - name: app-port
          containerPort: 8080
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /health-check/liveness
        #     port: app-port
        #   failureThreshold: 2
        #   periodSeconds: 10  
        # startupProbe:
        #   httpGet:
        #     path: /health-check/readines
        #     port: app-port
        #   failureThreshold: 30
        #   periodSeconds: 10  
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste-diego
  namespace: teste-diego
  labels:
    backstage.io/kubernetes-id: teste-diego
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste-diego.diegoluisi.eti.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: teste-diego
        port:
          number: 8080
