apps/teste-diego/base/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste-diego
  namespace: teste-diego
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste-diego.diegoluisi.eti.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: teste-diego
        port:
          number: 8080
